<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeActivity">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/welcomescreenbg"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0" android:contentDescription="@string/welcome_screen"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/go_all_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:textSize="46sp" app:fontFamily="@font/montserrat"
    />
    <TextView
            android:text="@string/on_goin_all_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textColor="@android:color/white"
            android:textSize="22sp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:fontFamily="@font/montserrat" android:textStyle="bold"/>
    <TextView
            android:text="@string/find_a_team_in_your_city_and_dominate_the_league"
            android:layout_width="236dp"
            android:layout_height="62dp"
            android:id="@+id/textView3" android:singleLine="false"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textColor="@android:color/white" android:textSize="18sp" android:textAllCaps="false"
            app:fontFamily="@font/montserrat"/>
    <Button
            android:text="@string/get_started"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/getStartedBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.501"
            android:textSize="14sp" android:textColor="@android:color/white"
            android:background="@drawable/swoosh_button" style="@style/Widget.AppCompat.Button.Borderless"/>
</androidx.constraintlayout.widget.ConstraintLayout>