<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/begginer_background"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView2"
            android:scaleType="fitCenter" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:contentDescription="@string/swoosh_logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textColor="@android:color/white"
            android:textSize="18sp" app:fontFamily="@font/montserrat"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="0.49"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/begginerBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                app:fontFamily="@font/montserrat" android:checked="false" android:onClick="onBegginerClick"
                android:textOff="@string/beginner" android:textOn="@string/beginner"/>
        <ToggleButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ballerBtn" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"

                app:fontFamily="@font/montserrat" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:onClick="onBallerClick" android:textOff="@string/baller" android:textOn="@string/baller" android:text="@string/baller"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishBtn" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"
            android:textColor="@android:color/white" android:background="@drawable/swoosh_button"
            app:fontFamily="@font/montserrat" android:onClick="onFinishClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>