<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0"
            android:contentDescription="@string/league_background"/>
    <ImageView
            android:layout_width="88dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/smoosh_logo"
            android:scaleType="fitCenter"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textColor="@android:color/white"
            android:textSize="18sp" app:fontFamily="@font/montserrat" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:paddingTop="8dp" android:paddingBottom="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.183">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                app:fontFamily="@font/montserrat"
                android:layout_height="wrap_content"
                android:id="@+id/mensLeagueBtn"
                android:textOff="@string/mens"
                android:textOn="@string/mens"
                android:textColor="@android:color/white"
                android:background="@drawable/swoosh_toggle"
                android:onClick="onMensClicked"/>
        <ToggleButton
                android:text="@string/womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="@font/montserrat"
                android:id="@+id/womensLeagueBtn"
                android:textOff="@string/womens"
                android:textOn="@string/womens"
                android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="onWomensCLicked"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/co_ed"
                android:textOn="@string/co_ed"
                android:background="@drawable/swoosh_toggle"
                app:fontFamily="@font/montserrat"
                android:textColor="@android:color/white"
                android:id="@+id/coEdLeagueBtn"
                android:onClick="onCoedClicked"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:fontFamily="@font/montserrat"
            android:id="@+id/leagueNextBtn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.501"
            android:background="@drawable/swoosh_button"
            android:textColor="@android:color/white"
            android:onClick="leagueNextClicked"/>

</androidx.constraintlayout.widget.ConstraintLayout>